# UFEMISM2.0_porting

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_LADDIE.csh  compile_UFEMISM.csh  compile_UPSY.csh  config_test2.cfg  environment.yml  pyproject.toml
src/LADDIE/: CMakeLists.txt  laddie_dummy_domain.f90  laddie_hydrology.f90  laddie_integration.f90  laddie_main_utils.f90  laddie_operators.f90  laddie_output.f90  laddie_physics.f90  laddie_thickness.f90  laddie_tracers.f90  laddie_utilities.f90  laddie_velocity.f90
src/LADDIE/forcing/: laddie_forcing_main.f90
src/LADDIE/io/: laddie_grid_output.f90  laddie_mesh_output.f90  laddie_scalar_output.f90
src/LADDIE/main/: LADDIE_main_model.f90  LADDIE_program.f90  laddie_main.f90
src/LADDIE/types/: laddie_forcing_types.f90  laddie_model_types.f90
src/LADDIE/validation/: laddie_unit_tests.f90  ut_laddie.f90
src/UFEMISM/: CMakeLists.txt
src/UFEMISM/artificial_mass_balance/: AMB_main.f90
src/UFEMISM/basal_hydrology/: basal_hydrology_main.f90
src/UFEMISM/basal_mass_balance/: BMB_idealised.f90  BMB_inverted.f90  BMB_laddie.f90  BMB_main.f90  BMB_parameterised.f90  BMB_prescribed.f90
src/UFEMISM/basic/: model_configuration.f90
src/UFEMISM/bed_roughness/: bed_roughness_main.f90
src/UFEMISM/bed_roughness/nudging/: bed_roughness_nudging_H_dHdt_Akker.f90  bed_roughness_nudging_H_dHdt_flowline.f90  bed_roughness_nudging_H_dHdt_local.f90  bed_roughness_nudging_H_u_flowline.f90  bed_roughness_nudging_main.f90  nudging_utilities.f90
src/UFEMISM/climate/: climate_idealised.f90  climate_main.f90  climate_matrix.f90  climate_model_utilities.f90  climate_realistic.f90  climate_retreat_mask.f90  climate_snapshot_plus_anomalies.f90  climate_snapshot_plus_transient_deltaT.f90  climate_snapshot_plus_uniform_deltaT.f90
src/UFEMISM/climate/matrix/: climate_matrix_utilities.f90
src/UFEMISM/glacial_isostatic_adjustment/: GIA_ELRA.f90  GIA_main.f90
src/UFEMISM/global_forcings/: global_forcings_main.f90  series_utilities.f90
src/UFEMISM/ice_dynamics/: ice_dynamics_main.f90
src/UFEMISM/ice_dynamics/conservation_of_mass/: conservation_of_mass_explicit.f90  conservation_of_mass_main.f90  conservation_of_mass_semiimplicit.f90  (+2 more)
src/UFEMISM/lateral_mass_balance/: LMB_GlacialIndex.f90  LMB_main.f90
src/UFEMISM/main/: UFEMISM_main_model.f90  UFEMISM_program.f90
src/UFEMISM/mesh_creation/: graph_pair_creation.f90  mesh_creation_from_reduced_geometry.f90  mesh_creation_main.f90  mesh_creation_refine_in_ROIs.f90  reduce_ice_geometry.f90
src/UFEMISM/ocean/: ocean_GlacialIndex.f90  ocean_deltaT.f90  ocean_deltaT_transient.f90  ocean_extrapolation.f90  ocean_idealised.f90  ocean_main.f90  ocean_realistic.f90  ocean_snapshot_nudge2D.f90  ocean_snapshot_plus_anomalies.f90  ocean_snapshot_plus_unif_dT.f90  ocean_utilities.f90
src/UFEMISM/reference_geometries/: idealised_geometries.f90  preprocess_geometry.f90  reference_geometries_main.f90
src/UFEMISM/surface_mass_balance/: SMB_IMAU_ITM.f90  SMB_basic.f90  SMB_idealised.f90  SMB_main.f90  SMB_model.f90  SMB_prescribed.f90  SMB_reconstructed.f90  SMB_snapshot_plus_anomalies.f90
src/UFEMISM/thermodynamics/: geothermal_heat_flux.f90  thermodynamics_3D_heat_equation.f90  thermodynamics_main.f90  thermodynamics_utilities.f90
src/UFEMISM/tracer_tracking/: tracer_tracking_main.f90  tracer_tracking_particles_basic.f90  tracer_tracking_particles_io.f90  tracer_tracking_particles_main.f90  tracer_tracking_particles_remapping.f90
src/UFEMISM/transects/: apply_maps_transects.f90  netcdf_write_field_transect.f90  remapping_transects.f90  transects_main.f90
src/UFEMISM/types/: BMB_model_types.f90  SMB_model_types.f90  bed_roughness_model_types.f90  climate_model_types.f90  ice_model_types.f90  ocean_model_types.f90  region_types.f90  scalar_types.f90  transect_types.f90
src/UPSY/: CMakeLists.txt  UPSY_component_test_program.f90  UPSY_component_test_program_mesh_creation.f90  UPSY_multinode_unit_test_program.f90  UPSY_unit_test_program.f90
src/UPSY/basic/: Arakawa_grid_mod.f90  basic_model_utilities.f90  basic_program_info.f90  call_stack_and_comp_time_tracking.f90  checksum_mod.f90  control_resources_and_error_messaging.f90  crash_mod.f90  grid_lonlat_basic.f90  model_configuration.f90  parameters.f90  petsc_basic.f90  string_module.f90
src/UPSY/fields/: fields_basic.f90  fields_basic_submod_eq.f90  fields_basic_submod_is_parent.f90  fields_basic_submod_print_info.f90  fields_basic_submod_read_from_netcdf.f90  fields_basic_submod_reallocate.f90  fields_basic_submod_remap.f90  fields_basic_submod_set_get.f90  fields_basic_submod_write_to_netcdf.f90  fields_create_field.f90  fields_dimensions.f90  fields_field_collection.f90  fields_info_submod.f90  fields_init_field.f90  fields_main.f90  fields_registry.f90  fields_registry_submod_basic.f90  fields_registry_submod_create_field.f90  fields_registry_submod_destroy.f90  fields_registry_submod_io.f90  fields_registry_submod_reallocate.f90  fields_registry_submod_reallocate_field.f90  fields_registry_submod_remap.f90  fields_registry_submod_remap_field.f90
src/UPSY/main/: UPSY.f90  UPSY_main.f90
src/UPSY/mesh/: mesh_Lloyds_algorithm.f90  mesh_ROI_polygons.f90  mesh_contiguous_domains.f90  mesh_contour.f90  mesh_data_smoothing.f90  mesh_dummy_meshes.f90  mesh_focussing.f90  mesh_halo_exchange.f90  mesh_integrate_over_domain.f90  mesh_memory.f90  mesh_parallel_creation.f90  mesh_parallelisation.f90  mesh_refinement_basic.f90  mesh_refinement_basic_ROI.f90  mesh_refinement_fun.f90  mesh_repartitioning.f90  mesh_secondary.f90  mesh_utilities.f90  mesh_zeta.f90
src/UPSY/models/: models_basic.f90  models_basic_submod_allocate.f90  models_basic_submod_create_field.f90  models_basic_submod_eq.f90  models_basic_submod_initialise.f90  models_basic_submod_reallocate_field.f90  models_basic_submod_remap.f90  models_basic_submod_restart_file.f90  models_basic_submod_run.f90  models_basic_submod_set_get.f90  models_demo.f90
src/UPSY/types/: graph_types.f90  mesh_types.f90  parallel_array_info_type.f90  polyline_types.f90
(+2677 files in other folders)
